--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -306,10 +306,26 @@
 /* 참여 프로그램 관리 - 목록 있음 (UI_ADHPAdM02) */
 
 
-/* 참여 프로그램 관리 - 조회 (UI_ADHPAdS03) */
+/* 참여 프로그램 관리 - 조회 (UI_ADHPAc03) */
+.mypage .progmg.allcare .ico24_file.mov {background:url("../include/images/ico24_file_movie.svg")}
+.mypage .progmg.allcare .ico24_file.psd {background:url("../include/images/ico24_file_photoshop.svg")}
+.mypage .progmg.allcare .ico24_file.ai {background:url("../include/images/ico24_file_ai.svg")}
+.mypage .progmg.allcare .prog_info_wrap tr th {font-size: 16px; color: #333; font-weight: 600; line-height: 28px;}
+.mypage .progmg.allcare .prog_info_wrap tr td {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
+.mypage .progmg.allcare .prog_info_wrap tr td p.data_txt span {font-weight: 600;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_uni td p.data_txt,
+.mypage .progmg.allcare .prog_info_wrap tr.new_prog td p.data_txt {font-weight: 600;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li + li {margin-top: 8px;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li a {display: flex; align-items: center; gap: 8px;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li .ico24_file {margin: 0;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li a p {max-width: 700px; position: relative; display: inline-block; font-size: 16px; color: #333; font-weight: 400; line-height: 28px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_down span.down {width: 16px; height: 16px; background: url(../include/images/ico16_download2.svg.svg);}
+.mypage .progmg.allcare .prog_info_wrap tr.new_desc .box_board_text {text-align: left;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_desc .box_board_text .b1_r {font-size: 16px;}
 
 
-/* 참여 프로그램 관리 - 만족도 조사 (UI_ADHPAdS04) */
+/* 참여 프로그램 관리 - 만족도 조사 (UI_ADHPAc04) */
+
 
 
 /* 상담이력 - 목록 없음 (UI_ADHPAeM01) */
