--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -316,7 +316,7 @@
 .mypage .progmg.allcare .prog_info_wrap tr.new_uni td p.data_txt,
 .mypage .progmg.allcare .prog_info_wrap tr.new_prog td p.data_txt {font-weight: 600;}
 .mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li + li {margin-top: 8px;}
-.mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li a {display: flex; align-items: center; gap: 8px;}
+.mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li a {display: inline-flex; align-items: center; gap: 8px;}
 .mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li .ico24_file {margin: 0;}
 .mypage .progmg.allcare .prog_info_wrap tr.new_down .down_box ul li a p {max-width: 700px; position: relative; display: inline-block; font-size: 16px; color: #333; font-weight: 400; line-height: 28px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
 .mypage .progmg.allcare .prog_info_wrap tr.new_down span.down {width: 16px; height: 16px; background: url(../include/images/ico16_download2.svg.svg);}
@@ -325,6 +325,7 @@
 
 
 /* 참여 프로그램 관리 - 만족도 조사 (UI_ADHPAc04) */
+.mypage .progmg.allcare .prog_view_result tr td p.data_txt span {color: var(--col_blue);}
 
 
 
