--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -332,8 +332,17 @@
 /* 참여 프로그램 관리 - 조회 (UI_ADHPAdS03) */
 .mypage .progmg.allcare .prog_mgview tr td p.data_txt span {color: var(--col_blue);}
 
-/* 참여 프로그램 관리 - 만족도 조사 (UI_ADHPAdS04) */
 
+/* 참여 프로그램 관리 - 만족도 조사 (UI_ADHPAdS04) */
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li {padding: 12px 0; border-bottom: 1px solid #eee;}
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li:first-child {margin-top: 8px; border-top: 1px solid #eee;}
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li .que_tit p {color: #333;}
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li .que_tit p span {color: var(--col_blue);}
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li .que_desc {margin-top: 8px; display: flex; justify-content: flex-end; align-items:start ;}
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li .que_desc p { color: #ee2e62; text-align: left; width: 100%; flex: 1;}
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li .que_desc fieldset {border: none;}
+.mypage .progmg.allcare .radio_survey_wrap .que_list>li .que_desc .radio_list {display: flex; gap: 16px;}
+.mypage .progmg.allcare .radio_survey_wrap .que_desc .new_radio_item label .label_text {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
 
 
 /* 상담이력 - 목록 없음 (UI_ADHPAeM01) */
