--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -18,6 +18,7 @@
 .allcare .radio_filed .new_radio_item label .radio_ui {position: absolute; left: 0; top: 0; display: block; margin: 0; width: 22px; height: 22px; border: 1px solid #757575; border-radius: 50%;}
 .allcare .radio_filed .new_radio_item input[type="radio"]:checked + label .radio_ui::after {content: ""; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 22px; height: 22px; border: 5px solid var(--col_blue); border-radius: 50%;}
 .allcare .radio_filed .new_radio_item label .label_text {margin-left: 27px; font-size: 16px; font-weight: 400; color: #333; line-height: 24px; }
+.allcare .radio_filed.radiof_type2 {display: flex;}
 
 
 .allcare .mt80 {margin-top: 80px;}
@@ -69,18 +70,21 @@
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap::after {content: ''; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); width: calc(100% + 2.5rem); height: 8px; background-color: #f3f5f6;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap dl {} 
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap dl>div {} 
-.mypage .progmg.allcare .my_ptcp_from .box_table_wrap dl>div + div {border-top: 1px solid #eee;} 
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap.top_linewrap dl>div + div {border-top: 1px solid #eee;} 
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap dl dt {margin-top: 16px; font-size: 14px; color: #555; font-weight: 600; line-height: 24px;} 
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap dl dd {margin: 8px 0 16px; font-size: 16px; color: #333; font-weight: 400; line-height: 24px;} 
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap dl>div:last-child dd {margin-bottom: 0;}
-.mypage .progmg.allcare .my_ptcp_from .dl_uni dd .box_table_group {display: flex; width: 100%; gap: 8px;}
-.mypage .progmg.allcare .my_ptcp_from .dl_uni dd .box_table_group .cell {width: calc(100% - 60px); line-height: initial;}
-.mypage .progmg.allcare .my_ptcp_from .dl_uni dd .box_table_group .cell .new_ipt {}
-.mypage .progmg.allcare .my_ptcp_from .dl_uni dd .box_table_group .cell .new_ipt input {padding: 10px 170px 10px 16px; width: 100%; height: 48px; border: 1px solid #757575; border-radius: 4px; background-color: #f5f5f5;}
-.mypage .progmg.allcare .my_ptcp_from .dl_uni dd .box_table_group .cell .new_ipt button {}
-.mypage .progmg.allcare .my_ptcp_from .dl_uni dd .box_table_group>button.btnSearch {width: 60px; height: 48px;}
-
+.mypage .progmg.allcare .my_ptcp_from  dd .box_table_group {display: flex; width: 100%; gap: 8px;}
+.mypage .progmg.allcare .my_ptcp_from  dd .box_table_group .cell {width: calc(100% - 60px); line-height: initial;}
+.mypage .progmg.allcare .my_ptcp_from  dd .box_table_group .cell .new_ipt {position: relative;}
+.mypage .progmg.allcare .my_ptcp_from  dd .box_table_group .cell .new_ipt input {padding: 10px 48px 10px 16px; width: 100%; height: 48px; border: 1px solid #757575; border-radius: 4px; background-color: #f5f5f5;}
+.mypage .progmg.allcare .my_ptcp_from  dd .box_table_group .cell .new_ipt button {background: url('../include/images/ico16_close.svg') no-repeat center / contain; width: 16px; height: 16px; position: absolute; right: 16px; top: 50%; transform: translateY(-50%);}
+.mypage .progmg.allcare .my_ptcp_from  dd .box_table_group>button.btnSearch {width: 60px; height: 48px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dl_person dd {margin: 12px 0 16px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dl_id input {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 16px; border: 1px solid #757575; border-radius: 4px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap select.new_down {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 32px 10px 16px; border: 1px solid #757575; border-radius: 4px; appearance: none; -webkit-appearance: none; -moz-appearance: none; background: url('../images/arrow16_down.svg') no-repeat center / contain; background-position:  right 16px center; background-size: 16px;}
+.mypage .progmg.allcare .my_ptcp_from .box_table_wrap select.new_down option:disabled {display: none;}
+
 
 /* 참여신청서 - 조회 (UI_ADHPAbS04) */
 
