--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -8,6 +8,7 @@
 .allcare * {letter-spacing: -0.02em}
 .allcare .sr_only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
 .allcare .btn_s_r {font-weight: 400 !important;}
+.allcare .mt8 {margin-top: 8px;}
 .allcare .box_table_wrap:not(.r_type01,.r_type02) .box_table.new_table th {font-size: 16px; font-weight: 600; line-height: 28px; color: #333;}
 .allcare .box_table_wrap:not(.r_type01,.r_type02) .box_table.new_table td {font-size: 16px; font-weight: 400; line-height: 28px; color: #333;}
 .allcare .new_table tr th {padding: 12px 10px;}
@@ -50,13 +51,22 @@
 
 /* 운영대학 목록 (UI_ADHPAaM01) */
 .support .youth.allcare .gsprog_uni>div+div {margin-top: 40px;}
-.support .youth.allcare .gsprog_uni .step_cont_area {padding: 24px 20px; border: 1px solid #ddd; border-radius: 8px;}
-.support .youth.allcare .gsprog_uni .step_cont_area ol {margin-top: 10px; display: flex; justify-content: space-between; align-items: stretch; gap: 24px;}
-.support .youth.allcare .gsprog_uni .step_cont_area ol>li {position: relative; width: 100%; padding: 24px; border: 1px solid #ddd; border-radius: 8px; text-align: center;}
-.support .youth.allcare .gsprog_uni .step_cont_area ol>li+li::before {content: ''; width: 24px; height: 24px; position: absolute; left: -24px; top: 50%; transform: translateY(-50%); background: url('../include/images/ico24_arrow2_right.svg') no-repeat center / contain;} 
-.support .youth.allcare .gsprog_uni .step_cont_area ol>li p:first-child {border-bottom: 1px solid #ddd; padding-bottom: 16px; margin-bottom: 16px; color: #333;}
-.support .youth.allcare .gsprog_uni .step_cont_area ol>li p:first-child span {color: var(--col_blue);}
-.support .youth.allcare .gsprog_uni .step_cont_area ol>li p:last-child {color: #555;}
+.support .youth.allcare .gsprog_uni .step_cont_area {}
+.support .youth.allcare .gsprog_uni .step_cont_area ol {display: flex; gap: 24px;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li {position: relative; width: 25%;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li>div {padding: 24px;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li+li::after {content: ''; position: absolute; left: -24px; top: 50%; transform: translateY(-50%); width: 24px; height: 24px; background: url('../include/images/ico24_arrow2_right.svg') no-repeat center / contain;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .tit {height: 160px; border: 1px solid var(--col_blue); background-color: var(--col_blue); border-radius: 12px 12px 0 0 ;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .tit * {color: #fff; font-size: 18px; font-weight: 600; line-height: 28px;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .tit .step_num {position: relative; text-align: right; width: 100%; display: block; margin: 6px 0;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .tit .step_num::after {content: ''; position: absolute; left: 0; top: 50%; transform: translateY(-50%); width: 40px; height: 40px; background: url('../images/support/ico40_PC.svg') no-repeat center / contain;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li.li_step02 .tit .step_num::after {background-image: url('../images/support/ico40_note.svg');}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li.li_step03 .tit .step_num::after {background-image: url('../images/support/ico40_pick.svg');}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li.li_step04 .tit .step_num::after {background-image: url('../images/support/ico40_people.svg');}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .desc {height: 184px; border: 1px solid #ddd; border-top: none; border-radius: 0 0 12px 12px;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .desc p {font-size: 16px; line-height: 28px; font-weight: 400; color: #333;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .desc p.note {margin-top: 8px; font-size: 14px; line-height: 24px; color: #333; font-weight: 400;}
+.support .youth.allcare .gsprog_uni .step_cont_area ol li .desc p.note .note_symbol {color: var(--col_blue);}
 .support .youth.allcare .gsprog_uni .step_btn_box {margin-top: 24px; display: flex; justify-content: space-between; align-items: center;}
 .support .youth.allcare .gsprog_uni .step_btn_box p {padding-left: 16px; position: relative; color: #333;}
 .support .youth.allcare .gsprog_uni .step_btn_box p::before {content: ''; width: 4px; height: 4px; position: absolute; left: 4px; top: 50%; transform: translateY(-50%); background-color: #555; border-radius: 50%;}
@@ -64,9 +74,14 @@
 .support .youth.allcare .gsprog_uni .uniporg_cont fieldset {border: none;}
 .support .youth.allcare .gsprog_uni .new_table tbody tr td:nth-child(3) {word-break: keep-all;}
 .support .youth.allcare .gsprog_uni tr+tr {border-top: 1px solid #eee;}
-.support .youth.allcare .gsprog_uni .statusDesc_cont {padding: 16px 24px; border: 1px solid #ddd; border-radius: 8px; display: flex; justify-content: space-between; align-items: center;}
-.support .youth.allcare .gsprog_uni .statusDesc_cont p {color: #555;}
-.support .youth.allcare .gsprog_uni .statusDesc_cont button {padding: 6px 16px; border-radius: 4px; border: 1px solid #757575; color: #333;}
+.support .youth.allcare .gsprog_uni .statusdesc_cont {display: flex; justify-content: space-between; align-items: center; width: 100%; padding: 24px 40px; background-color: rgb(77, 101, 225, 0.1); border-radius: 12px;}
+.support .youth.allcare .gsprog_uni .statusdesc_cont .statusdesc_info {display: flex; align-items: center; gap: 8px;}
+.support .youth.allcare .gsprog_uni .statusdesc_cont .statusdesc_info i {width: 48px; height: 48px; background: url('../images/support/task-square.svg') no-repeat center / contain;}
+.support .youth.allcare .gsprog_uni .statusdesc_cont .statusdesc_box p+p {margin-top: 4px;}
+.support .youth.allcare .gsprog_uni .statusdesc_cont button {position: relative; border: 1px solid #757575; border-radius: 4px; background-color: #fff; font-size: 16px; line-height: 28px; color: #333; padding: 6px 36px 6px 16px;}
+.support .youth.allcare .gsprog_uni .statusdesc_cont button::after {position: absolute; content: ''; right: 16px; top: 50%; width: 16px; height: 16px; transform: translateY(-50%); background: url('../include/images/ico16_arrow_right.svg') no-repeat center / contain; }
+
+
 
 
 /* [팝업] 운영대학 목록 - 프로그램 조회 팝업 (UI_ADHPAaM02) */ 
